Fixed flickering effect while switching images

--- a/src/lsb.scss
+++ b/src/lsb.scss
@@ -1,10 +1,11 @@
 $lsbUIColor: #ffffff;
 // z-index according 10 gap between possible values
-// e.g. 0 - 9 for main block, 
+// e.g. 0 - 9 for main block,
 // 10 - 19 for side panels
 // 20 - 29 for header elements
-// 30 + for the top most elements such as this lightbox 
+// 30 + for the top most elements such as this lightbox
 $lsbZindex: 30;
+
 .lightspeed-box {
   visibility: hidden;
   opacity: 0;
@@ -43,7 +44,7 @@ $lsbZindex: 30;
     text-align: center;
     margin: auto;
     padding: 20px;
-    transition: all .5s;
+    transition: all 0.5s;
     height: 100%;
   }
   .lsb-image-container {
@@ -58,6 +59,9 @@ $lsbZindex: 30;
     align-items: center;
     justify-content: space-around;
   }
+  .lsb-noimage {
+    opacity: 0;
+  }
   img.lsb-image {
     position: relative;
     max-height: 0%;
@@ -66,7 +70,7 @@ $lsbZindex: 30;
     min-width: 0;
     min-height: 0;
     margin: auto;
-    transition: all .95s cubic-bezier(0.12, 0.58, 0.26, 0.99);
+    transition: all 0.95s cubic-bezier(0.12, 0.58, 0.26, 0.99);
     user-select: none;
     object-fit: scale-down; // Fix scale issues in Firefox
     &.lsb-image-loaded {
@@ -110,9 +114,9 @@ $lsbZindex: 30;
     transform: translateX(50%);
     z-index: 2;
     margin-bottom: 20px;
-    background: rgba(0, 0, 0, .64);
+    background: rgba(0, 0, 0, 0.64);
     border-radius: 3px;
-    opacity: .5;
+    opacity: 0.5;
     &:hover {
       opacity: 1;
     }
@@ -144,7 +148,6 @@ $lsbZindex: 30;
     }
   }
   .lsb-play {
-    
   }
   .lsb-pause {
     svg {
@@ -175,8 +178,8 @@ $lsbZindex: 30;
     font-size: 14px;
     text-shadow: 0 1px 4px #000000;
     color: $lsbUIColor;
-    background: rgba(0, 0, 0, .32);
-    transition: opacity .5s ease-out;
+    background: rgba(0, 0, 0, 0.32);
+    transition: opacity 0.5s ease-out;
     opacity: 0;
     &.lsb-image-notitle {
       opacity: 0;
@@ -199,7 +202,7 @@ $lsbZindex: 30;
     &:hover {
       color: $lsbUIColor;
       text-shadow: 0 0 2px #000, 0 0 20px $lsbUIColor;
-      
+
       svg {
         opacity: 1;
       }
@@ -216,7 +219,7 @@ $lsbZindex: 30;
     svg {
       width: 21px;
       height: 100%;
-      opacity: .5;
+      opacity: 0.5;
       position: absolute;
     }
   }
@@ -237,7 +240,6 @@ $lsbZindex: 30;
     svg:last-child {
       right: 36px;
     }
-    
   }
   .lsb-close {
     position: absolute;
@@ -250,7 +252,7 @@ $lsbZindex: 30;
     svg {
       width: 21px;
       height: 28px;
-      opacity: .5;
+      opacity: 0.5;
       position: absolute;
       top: 25px;
       right: 35px;
@@ -297,6 +299,7 @@ $lsbZindex: 30;
     }
   }
 }
+
 @keyframes waitingiconSicrleDelay {
   0%,
   39%,
